--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
   <script>
     // TODO: 替換成你的 Firebase 專案設定
     const firebaseConfig = {
-        apiKey: "AIzaSy8mj8m1C4to9TR6tgLtu-M66HMig3o",
-        authDomain: "test-6eab5.firebaseapp.com",
-        projectId: "test-6eab5",
-        storageBucket: "test-6eab5.appspot.com",
-        messagingSenderId: "177279310655",
-        appId: "1:177279310655:web:b40b48f01e3e53a08929c0",
-        measurementId: "G-YY7TZQTN8G"
+      apiKey: "AIzaSyBwjsmTci4IoQ6Tp_R6tgL4tu-M66HWg3o",
+      authDomain: "test-6eab5.firebaseapp.com",
+      projectId: "test-6eab5",
+      storageBucket: "test-6eab5.firebasestorage.app",
+      messagingSenderId: "77273913665",
+      appId: "1:77273913665:web:04ba84f0013e35a09829c0",
+      measurementId: "G-XYY7ZYTQNB"
     };
 
 
