--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       apiKey: "AIzaSyBwjsmTci4IoQ6Tp_R6tgL4tu-M66HWg3o",
       authDomain: "test-6eab5.firebaseapp.com",
       projectId: "test-6eab5",
-      storageBucket: "test-6eab5.firebasestorage.app",
+      storageBucket: "test-6eab5.appspot.com",
       messagingSenderId: "77273913665",
       appId: "1:77273913665:web:04ba84f0013e35a09829c0",
       measurementId: "G-XYY7ZYTQNB"
